ingress/ingress-com-ssl.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-host
  annotations:                                        ## Sistemas que consomem desse ingress podem utilizar esse anotation para alguma funcionalidade
    kubernetes.io/ingress.class: "nginx"              ## podem existir outros Ingress
    cert-manager.io/cluster-issuer: "lets-encrypt"          ### Linha que relaciona o INGRESS ao CERT-MANAGER através do ClusterIssuer
    ingress.kubernetes.io/force-ssl-redirect: "true"  ## plugin que transforma HTTP em HTTPS

spec:
  rules:
  - host: "ingress.anselme.com.br"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: goserver
            port: 
              number: 80
  tls:
  - hosts:
    - "ingress.anselme.com.br"  
    secretName: "lets-encrypt-certificate"
